cmake_minimum_required (VERSION 3.5)
project (ds1302)
find_library(libwiringPi wiringPi)
find_library(libwiringPiDev wiringPiDev)
if ("${libwiringPi}" STREQUAL "libwiringPi-NOTFOUND")
  message(FATAL_ERROR "depend lib not found")
else()
  message(STATUS "found ${libwiringPi}")
endif()
add_executable(ds1302 ds1302.c)
target_link_libraries(ds1302 ${libwiringPi} ${libwiringPiDev})
install(TARGETS ds1302 DESTINATION bin)
